[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/exit.png" type="Texture" id=1]
[ext_resource path="res://scripts/Exit.gd" type="Script" id=2]
[ext_resource path="res://assets/monogram-extended.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 196, 188 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 43.2712
height = 76.0103

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[node name="Exit" type="Node2D"]
script = ExtResource( 2 )

[node name="exitSprite" type="Sprite" parent="."]
light_mask = 0
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 24 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 43 )
rotation = -1.57778
shape = SubResource( 2 )

[node name="exitInstructions" type="RichTextLabel" parent="."]
visible = false
light_mask = 0
margin_left = -168.0
margin_top = -224.0
margin_right = 182.0
margin_bottom = -99.0
custom_colors/default_color = Color( 0.211765, 0.498039, 0.945098, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center] Press Enter to escape[/center]"
text = " Press Enter to escape"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
